--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -38,23 +38,19 @@ jobs:
           !WebApp/ClientApp
         key: api-${{ runner.os }}-${{github.run_id}}
 
-
-  something:
-
+  api-test:
     name: WebApp Testing
-
     runs-on: ubuntu-latest
-
     needs: api-build
 
     steps:
-      - name: Pull Built API from Cache
-        uses: actions/cache@v3
-        with:
-          path: |
-            .
-            !WebApp/ClientApp
-          key: api-${{ runner.os }}-${{github.run_id}}
+    - name: Pull Built API from Cache
+      uses: actions/cache@v3
+      with:
+        path: |
+          .
+          !WebApp/ClientApp
+        key: api-${{ runner.os }}-${{github.run_id}}
 
     - name: Run Tests
       run: dotnet test --no-build --verbosity normal
