WIP - Adding Ardalis.Specifications

--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>Smilodon.Domain</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Ardalis.Specification" />
+  </ItemGroup>
+
 </Project>
